fix(wizard-steps): Correction alignement parfait des connecteurs horizontaux
- Recalcul précis des positions left/right des connecteurs ::after
- Connecteurs partent maintenant du bord exact du cercle (50% + marker-size/2)
- Connecteurs arrivent au bord exact du cercle suivant (-50% + marker-size/2)
- Suppression des offsets var(--size-4) qui créaient un décalage visible
- Alignement pixel-perfect entre cercles et connecteurs
- Build validé : 4.59s

--- a/source/patterns/components/wizard-steps/wizard-steps.css
+++ b/source/patterns/components/wizard-steps/wizard-steps.css
@@ -62,8 +62,8 @@
         &::after {
           content: '';
           position: absolute;
-          left: calc(var(--ps-wizard-marker-size) / 2 + var(--size-4));
-          right: calc(-50% + var(--ps-wizard-marker-size) / 2 - var(--size-4));
+          left: calc(50% + var(--ps-wizard-marker-size) / 2);
+          right: calc(-50% + var(--ps-wizard-marker-size) / 2);
           top: calc(var(--ps-wizard-marker-size) / 2 - var(--ps-wizard-connector-size) / 2);
           height: var(--ps-wizard-connector-size);
           background: var(--ps-wizard-connector-color);
